!!! simplify Tag handling
